<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary1"
        android:alpha="0.5"></RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/cardview"
        android:padding="28dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book_icon">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="32sp"></TextView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/cardview"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/primary1"
                    android:textSize="32sp"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:alpha="0.7">
                </TextView>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"></View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:alpha="0.7"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email_address">
                </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_text"
                    android:alpha="0.7"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/show_icon"
                    android:id="@+id/password"
                    >
                </EditText>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_text"
                        android:layout_centerVertical="true"
                        android:alpha="0.7"
                        android:id="@+id/remember_me">
                    </CheckBox>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_text"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/forgot_password"
                        android:clickable="true">
                    </TextView>
                </RelativeLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"></View>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login_button"
                    app:cornerRadius="32dp"
                    android:id="@+id/login">
                </com.google.android.material.button.MaterialButton>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"></View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:alpha="0.7"
                    android:clickable="true"
                    android:id="@+id/register">
                </TextView>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"></View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_text"
                    android:layout_gravity="center"
                    android:alpha="0.7">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:src="@drawable/facebook"
                        android:id="@+id/facebook_continue"
                        android:clickable="true"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:src="@drawable/twitter"
                        android:id="@+id/twitter_continue"
                        android:clickable="true"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:src="@drawable/gmail"
                        android:id="@+id/gmail_continue"
                        android:clickable="true"></ImageView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>