<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Helper.Register"
    android:background="@color/primary1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:layout_above="@id/Register_card">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book_icon2">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="32sp"></TextView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/Register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_title"
                    android:textColor="@color/primary1"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:layout_gravity="center">
                </TextView>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"></View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:alpha="0.7"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:id="@+id/Register_Email">
                </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_text"
                    android:alpha="0.7"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/Register_Password"
                    >
                </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:alpha="0.7"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/Register_Confirm_Password"></EditText>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_of_use"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    android:id="@+id/Register_Agreement">
                </CheckBox>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"></View>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Back_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/back"
                    app:cornerRadius="32dp"></com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Register_Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/register_title"
                    app:cornerRadius="32dp"></com.google.android.material.button.MaterialButton>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>