<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Helper.Register"
    android:background="@color/primary1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:layout_above="@id/Register_card">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book_icon2">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="32sp"></TextView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/Register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:alpha="0.7"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:id="@+id/reset_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress">
                </EditText>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"></View>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/confirm"
                    app:cornerRadius="32dp">
                </com.google.android.material.button.MaterialButton>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>