<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SearchActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp">


            <TextView
                android:layout_width="198dp"
                android:layout_height="35dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"

                android:layout_weight="1"
                android:text="@string/Search"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/border_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextSearch_activity"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/Tag"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/grey" />

                <ImageButton
                    android:id="@+id/searchButton_activity"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/search" />

            </LinearLayout>


            <TextView
                android:layout_width="198dp"
                android:layout_height="35dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/Results"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="normal|bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/result_books"
                        android:layout_width="match_parent"
                        android:layout_height="272dp"
                        android:clipToPadding="false"
                        android:background="@color/primary4"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_marginBottom="50dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>